<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/campo_preencha"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/editTextoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo_nome"
            android:text="" />

        <EditText
            android:id="@+id/editTextoRaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_raca"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/editTextoIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_idade"
            android:text=""
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/editTextoPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_peso"
            android:text=""
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/button_Salvar"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_salvar"
            android:onClick="salvarAnimal"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="60dp"/>

        <TextView
            android:id="@+id/text_msg_banco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_visualizar"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_visualizar"
            android:onClick="trocaTela1"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="60dp"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>