<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="laysesantos.com.savetheanimals.MainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/campo_preencha" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo_nome"
            android:text="" />

        <EditText
            android:id="@+id/editTextRaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_raca"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/editTextIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_idade"
            android:text=""
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/editTextPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo_peso"
            android:text=""
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_salvar"
            android:onClick="salvarAnimal"/>

        <ListView
            android:id="@+id/listViewAnimais"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />




    </LinearLayout>
</android.support.constraint.ConstraintLayout>
