<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscolherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"
            android:hint="@string/campo_escolha"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="trocaTela2"
            android:text="@string/botao_cadastrar"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="60dp"
            tools:ignore="MissingConstraints" />

        <Button
        android:id="@+id/button_visualizar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="trocaTela3"
        android:text="@string/botao_visualizar2"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="60dp"
        tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_deletar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="trocaTela7"
            android:text="@string/botao_deletar"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="60dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageViewInicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/salvessanimais"
            android:hint="@string/app_name" />










    </LinearLayout>
</android.support.constraint.ConstraintLayout>