<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/campo_inicio"
            android:textSize="20sp"
            android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"/>

        <Button
            android:id="@+id/buttonInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="trocaTela"
            android:text="@string/botao_inicio"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="60dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageViewInicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/salvessanimais"
            android:hint="@string/app_name" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>